--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "choose-your-adventure",
+  "name": "Angular2-Choose-Your-Adventure",
   "version": "0.0.0",
   "license": "MIT",
   "angular-cli": {},
